tests/miniJava/neg/006645_mutation.MiniJava
class java { public static void Main new String [ ] java ) { { } } }
